Imagen base actualizada y lista de fav

--- a/FUNCIONAL PC/index.html
+++ b/FUNCIONAL PC/index.html
@@ -46,11 +46,13 @@
       <option value="">Seleccionar...</option>
       <option value="1">Don Julio</option>
       <option value="2">Arepas</option>
-      <option value="3">Salchipapa</option>
+      <option value="3">Panaderia Venecia</option>
       <option value="4">Panaderia Boston</option>
-      <option value="5">Amborguesas "Donde mi ex y yo"</option>
+      <option value="5">Panaderia Quiriyork</option>
       <option value="6">Lichigo</option>
       <option value="7">Carniceria</option>
+      <option value="8">Salsamentaria Esquina</option>
+      <option value="9">Chambacion</option>
     </select>
 
     <hr class="divisor2">
